Fix padding on mobile

--- a/app/components/App/style.scss
+++ b/app/components/App/style.scss
@@ -7,7 +7,6 @@
   }
 }
 .Sidebar {
-  padding: 40px;
   @media (min-width: 900px) {
     width: 30%;
     padding: 60px 40px 0 30px;
